--- a/index.html
+++ b/index.html
@@ -4,19 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin - Landing Page</title>
+    <link href="./styles.css" rel="stylesheet">
 </head>
 <body>
     <div class="header">
-        <h3>Header Logo</h3>
-        <ul>
-            <li>header link one</li>
-            <li>header link two</li>
-            <li>header link three</li>
-        </ul>
-        <h1>This website is awesome</h1>
-        <p>This website has some subtext that goes here under the main title. It is a smaller font and the color is lower contrast</p>
-        <button>Sign up</button>
-        <img src="https://images.unsplash.com/photo-1741290895082-208715c35a01?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
+        <div class="navbar">
+            <h3>Header Logo</h3>
+            <ul>
+                <li>header link one</li>
+                <li>header link two</li>
+                <li>header link three</li>
+            </ul>
+        </div>
+        <div class="hero">
+            <div class="text">
+                <h1>This website is awesome</h1>
+                <p>This website has some subtext that goes here under the main title. It is a smaller font and the color is lower contrast</p>
+                <button>Sign up</button>
+            </div>
+            <div class="image">this is a placeholder for an image</div>
+        </div>
     </div>
     <div class="content">
         <h2>Some random information.</h2>
@@ -43,10 +50,11 @@
         <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
         <h3>-Thor, God of Thunder</h3>
     </div>
-    <div class="footer">
+    <div class="signup">
         <p class="one">Call to action! It's time!</p>
         <p class="two">Sign up for our product by clicking that button right over there!</p>
         <button>Sign up</button>
     </div>
+    <div class="footer"><p>Copyright © The Odin Project 2021</p></div>
 </body>
 </html>
