Add content style

--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
         <h2>Some random information.</h2>
         <div class="cards">
             <div class="card">
-                <img src="https://images.unsplash.com/photo-1735615479436-6a697c3e0d48?q=80&w=1332&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
+                <div class="image"></div>
                 <p>this is some subtext under an illustration or image</p>
             </div>
             <div class="card">
-                <img src="https://images.unsplash.com/photo-1735615479436-6a697c3e0d48?q=80&w=1332&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
+                <div class="image"></div>
                 <p>this is some subtext under an illustration or image</p>
             </div>
             <div class="card">
-                <img src="https://images.unsplash.com/photo-1735615479436-6a697c3e0d48?q=80&w=1332&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
+                <div class="image"></div>
                 <p>this is some subtext under an illustration or image</p>
             </div>
             <div class="card">
-                <img src="https://images.unsplash.com/photo-1735615479436-6a697c3e0d48?q=80&w=1332&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
+                <div class="image"></div>
                 <p>this is some subtext under an illustration or image</p>
             </div>
         </div>
