--- a/index.html
+++ b/index.html
@@ -51,9 +51,11 @@
         <h3>- Thor, God of Thunder</h3>
     </div>
     <div class="signup">
-        <p class="one">Call to action! It's time!</p>
-        <p class="two">Sign up for our product by clicking that button right over there!</p>
-        <button>Sign up</button>
+        <div class="text">
+            <p class="one">Call to action! It's time!</p>
+            <p class="two">Sign up for our product by clicking that button right over there!</p>
+        </div>
+        <div class="button"><button>Sign up</button></div>
     </div>
     <div class="footer"><p>Copyright © The Odin Project 2021</p></div>
 </body>
